--- a/src/kpi/apeps/lectionLinks.html
+++ b/src/kpi/apeps/lectionLinks.html
@@ -9,5 +9,6 @@
 <p><a href="https://docs.google.com/presentation/d/1m0Z6ycLiF_PnH1NJGyZBwv8tMCEZ_M1SoHkyXxNYqZI/edit?usp=sharing">Lec 2 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1rCPeSw4ZbKuCNnENnHQZzrGV9t4EpLckK-QL8Ix8O40/edit?usp=sharing">Lec 3 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1AWZ5xTcXcrLCrhYT3odg1IIoPzrQ3H4s6FiQF8dfJqY/edit?usp=sharing">Lec 4 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1DuLF-JkMVwVy1J9XN6GvMUwt80T29HV-LeGbg8uj3n8/edit?usp=sharing">Lec 5 </a></p>
 </body>
 </html>
