--- a/src/kpi/apeps/LabLinks.html
+++ b/src/kpi/apeps/LabLinks.html
@@ -8,5 +8,6 @@
 <p><a href="https://docs.google.com/document/d/1C-B0_1NVjaX5DpXdllh2QB9Rgf-JudM2zN-ltPoxW84/edit?usp=sharing">Lab 2 </a></p>
 <p><a href="https://docs.google.com/document/d/1Dn7wvfjvf04WQWROzpekCJobLUj0J0n2gTpH26ceihg/edit?usp=sharing">Lab 3 </a></p>
 <p><a href="https://docs.google.com/document/d/1hTUPTCQT2uJ2yypJ-0zvmCgMJeRt1_Uc_k7UFQRTzCA/edit?usp=sharing">Lab 4 </a></p>
+<p><a href="https://docs.google.com/document/d/15G41g-9NZSYcJkDcTZik5Y2iBP6WeySWim-GNS4mVyU/edit?usp=sharing">Lab 5 </a></p>
 </body>
 </html>
