--- a/src/kpi/apeps/lectionLinks.html
+++ b/src/kpi/apeps/lectionLinks.html
@@ -13,5 +13,6 @@
 <p><a href="https://docs.google.com/presentation/d/1fglOYQCfTKciq2yU2V5Tc4EwFmFaFye9Dr0v0c8JNsc/edit?usp=sharing">Lec 6 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1GXSs6XIbTQDzo81U-tQMWkcuT07K0-lH_FkuApfgYXQ/edit?usp=sharing">Lec 7 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1pu3MEhDqGEQoe4H1pUFdtH3Gwcc-R4K_lGaK-PpPM0U/edit?usp=sharing">Lec 8 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1YzFOPXuoWbEd-J-LZ3x-_NCtyBpMPhR9G3KBGw8_Rt4/edit?usp=sharing">Lec 9 </a></p>
 </body>
 </html>
