--- a/src/kpi/apeps/lectionLinks.html
+++ b/src/kpi/apeps/lectionLinks.html
@@ -14,5 +14,6 @@
 <p><a href="https://docs.google.com/presentation/d/1GXSs6XIbTQDzo81U-tQMWkcuT07K0-lH_FkuApfgYXQ/edit?usp=sharing">Lec 7 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1pu3MEhDqGEQoe4H1pUFdtH3Gwcc-R4K_lGaK-PpPM0U/edit?usp=sharing">Lec 8 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1YzFOPXuoWbEd-J-LZ3x-_NCtyBpMPhR9G3KBGw8_Rt4/edit?usp=sharing">Lec 9 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1FYo2IqBG-K0BTJINdjg8Mnbh6-UzCZI3p0lN6wjuNDc/edit?usp=sharing">Lec 10 </a></p>
 </body>
 </html>
