--- a/src/kpi/apeps/lectionLinks.html
+++ b/src/kpi/apeps/lectionLinks.html
@@ -15,5 +15,7 @@
 <p><a href="https://docs.google.com/presentation/d/1pu3MEhDqGEQoe4H1pUFdtH3Gwcc-R4K_lGaK-PpPM0U/edit?usp=sharing">Lec 8 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1YzFOPXuoWbEd-J-LZ3x-_NCtyBpMPhR9G3KBGw8_Rt4/edit?usp=sharing">Lec 9 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1FYo2IqBG-K0BTJINdjg8Mnbh6-UzCZI3p0lN6wjuNDc/edit?usp=sharing">Lec 10 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1J1AHfBuQ6xs_qiUYz0lvgOeimzMaos_ei59BvsIhZUs/edit?usp=sharing">Lec 11 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1TyN8Ku9EGs4K_XSK05abgQG9I-UdC1ImRq9viBhMvD0/edit?usp=sharing">Lec 12 </a></p>
 </body>
 </html>
