--- a/src/kpi/apeps/lectionLinks.html
+++ b/src/kpi/apeps/lectionLinks.html
@@ -17,5 +17,7 @@
 <p><a href="https://docs.google.com/presentation/d/1FYo2IqBG-K0BTJINdjg8Mnbh6-UzCZI3p0lN6wjuNDc/edit?usp=sharing">Lec 10 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1J1AHfBuQ6xs_qiUYz0lvgOeimzMaos_ei59BvsIhZUs/edit?usp=sharing">Lec 11 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1TyN8Ku9EGs4K_XSK05abgQG9I-UdC1ImRq9viBhMvD0/edit?usp=sharing">Lec 12 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1BvBZXe2SDEhITc4YnxlRjpqx04ECqCtk_-RFXAbtzpE/edit?usp=sharing">Lec 13 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1kNUmEHK3tluOjxFXz2b50UBMIm-AhjudyZzr3wd-knM/edit?usp=sharing">Lec 14 </a></p>
 </body>
 </html>
