--- a/src/kpi/apeps/lectionLinks.html
+++ b/src/kpi/apeps/lectionLinks.html
@@ -19,5 +19,7 @@
 <p><a href="https://docs.google.com/presentation/d/1TyN8Ku9EGs4K_XSK05abgQG9I-UdC1ImRq9viBhMvD0/edit?usp=sharing">Lec 12 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1BvBZXe2SDEhITc4YnxlRjpqx04ECqCtk_-RFXAbtzpE/edit?usp=sharing">Lec 13 </a></p>
 <p><a href="https://docs.google.com/presentation/d/1kNUmEHK3tluOjxFXz2b50UBMIm-AhjudyZzr3wd-knM/edit?usp=sharing">Lec 14 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1cK3ydu7zTWedAj8yDupMKwRQJ2IdRergTLO_-oTxsvk/edit?usp=sharing">Lec 15 </a></p>
+<p><a href="https://docs.google.com/presentation/d/1pjlzbHyqItOs8U4X2-uFWUYD_De6WXjXrt3o9aDfSB0/edit?usp=sharing">Lec 16 </a></p>
 </body>
 </html>
